<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/itemCompanyCardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/itemCompanyConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <ImageView
            android:id="@+id/itemCompanyImageView"
            android:layout_width="105dp"
            android:layout_height="80dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/img_company"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/img_company" />

        <TextView
            android:id="@+id/itemCompanyNameTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginTop="14dp"
            android:text="@string/company_name"
            android:textColor="@color/dark_indigo"
            android:textSize="17sp"
            app:layout_constraintStart_toEndOf="@+id/itemCompanyImageView"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/itemCompanyTitleTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginTop="26dp"
            android:text="@string/business"
            android:textColor="@color/warm_grey"
            android:textSize="17sp"
            android:textStyle="italic"
            app:layout_constraintStart_toEndOf="@+id/itemCompanyImageView"
            app:layout_constraintTop_toTopOf="@+id/itemCompanyNameTextView" />

        <TextView
            android:id="@+id/itemCompanyCountryTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginTop="26dp"
            android:text="@string/item_country"
            android:textColor="@color/warm_grey"
            app:layout_constraintStart_toEndOf="@+id/itemCompanyImageView"
            app:layout_constraintTop_toTopOf="@+id/itemCompanyTitleTextView" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>